changes made to the app.js file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>This is the first git testing application.</h1>
     <h2>This is the test for any changes seen</h2>
+    <h2>This is the third pocess</h2>
+    <h3>This is the third commit section</h3>
     
 </body>
 </html>
